2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-basic-type): Remove one-argument
	and call.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-date-time): Improve docstring.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xmlschema-imports): Remove variable.
	(soap-parse-schema): Add wsdl argument.  Look up XML schema
	imports from wsdl.
	(soap-load-wsdl): Do not set soap-xmlschema-imports.
	(soap-parse-wsdl): Get XML schema imports from wsdl.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-current-file): Remove variable.
	(soap-wsdl): Add current-file slot.
	(soap-fetch-xml-from-url): Add wsdl argument.  Look up current
	file from wsdl.
	(soap-fetch-xml-from-file): Likewise.
	(soap-fetch-xml): Likewise.
	(soap-load-wsdl): Always create wsdl object first.
	(soap-parse-wsdl): Pass wsdl to soap-fetch-xml.

2014-11-29  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-element): Add is-group slot.
	(soap-xs-parse-element): Set is-group slot.
	(soap-resolve-references-for-xs-element): Skip is-group elements.
	(soap-xs-complex-type): Add is-group slot.
	(soap-xs-parse-complex-type): Set is-group slot.
	(soap-xs-parse-sequence): Parse xsd:group elements.
	(soap-resolve-references-for-xs-complex-type): Inline elements
	from referenced xsd:group nodes.
	(soap-parse-schema): Parse xsd:group nodes.

2014-11-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke): Don't set url-http-version to 1.0.

2014-11-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Allow choice nodes
	to accept multiple values.

2014-11-12  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-body): Check parameters argument for
	extra header values.

2014-11-11  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
